syntax = "proto3";

package api;

message HtmlRequest { 
  string documentId = 1;
}

message HtmlResponse {
	int32 status = 1;
  string document = 2;
}

service HtmlService {
  // Submit a new document, giving its URL
  rpc Render(HtmlRequest) returns (HtmlResponse) {}
}
